--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="min-h-screen flex flex-col -foreground">
   <app-header/>
   <main class="flex-1">
-    <app-create-notes></app-create-notes>
+    <router-outlet></router-outlet>
   </main>
   <app-footer/>
 </div>
