--- a/src/app/components/notes/note/note.component.html
+++ b/src/app/components/notes/note/note.component.html
@@ -1,3 +1,19 @@
-<p>
-  note works!
-</p>
+<div
+  class="bg-card shadow-md shadow-slate-900 p-4 mt-4 rounded-md border-t-8 {{
+    'border-t-' + note.model
+  }}"
+  [ngClass]="widthNote()"
+>
+  <p class="subject {{ 'text-' + note.model }}">
+    <ng-icon name="lucideScrollText" class="mr-2" /><b>{{ note.subject }}</b>
+  </p>
+  <p class="content mt-4">{{ note.content }}</p>
+  <div class="flex justify-center gap-2">
+    <button hlmBtn variant="outline" class="border-none cursor-pointer mt-2.5">
+      <ng-icon name="lucideEdit" />
+    </button>
+    <button hlmBtn variant="outline" class="border-none cursor-pointer mt-2.5">
+      <ng-icon name="lucideTrash2" />
+    </button>
+  </div>
+</div>
