Update createNote and Init deleteNote

--- a/src/app/components/notes/create-notes/create-notes.component.html
+++ b/src/app/components/notes/create-notes/create-notes.component.html
@@ -87,7 +87,7 @@
     
     <div class="flex justify-center align-middle gap-5 mt-4">
       <button hlmBtn variant="outline" (click)="createNote()">Salvar</button>
-      <button hlmBtn variant="outline" (click)="cancel()" routerLink="/listNote">Cancelar</button>
+      <button hlmBtn variant="outline" (click)="cancel()">Cancelar</button>
     </div>
   </form>
 </section>
