--- a/src/app/components/notes/note/note.component.html
+++ b/src/app/components/notes/note/note.component.html
@@ -1,11 +1,9 @@
 <div
-  class="bg-card shadow-md shadow-slate-900 p-4 mt-4 rounded-md border-t-8 {{
-    'border-t-' + note.model
-  }}"
+  class="bg-card shadow-md shadow-slate-900 p-4 mt-4 rounded-md border-t-8 {{ note.model }}"
   [ngClass]="widthNote()"
 >
-  <p class="subject {{ 'text-' + note.model }}">
-    <ng-icon name="lucideScrollText" class="mr-2" /><b>{{ note.subject }}</b>
+  <p class="subject">
+    <b><ng-icon name="lucideScrollText" class="mr-2 {{ note.model }}" />{{ note.subject }}</b>
   </p>
   <p class="content mt-4">{{ note.content }}</p>
   <div class="flex justify-center gap-2">
