--- a/src/app/components/notes/read-note/read-note.component.html
+++ b/src/app/components/notes/read-note/read-note.component.html
@@ -1,10 +1,23 @@
 <section class="container">
   <header class="header flex flex-col gap-10 mt-10">
+    <div class="flex items-center self-center w-4/12">
+      <ng-icon name="lucideSearch" class="absolute ps-3.5" />
+      <input 
+        hlmInput
+        autofocus 
+        type="search" 
+        id="search" 
+        placeholder="Procurar notas..." 
+        class="my-1 h-10 bg-background w-full ps-10"
+        [(ngModel)]="filter"
+        (keyup)="searchNotes()"
+      />
+    </div>
     <h2 class="text-center font-bold text-3xl">Mural de Notas</h2>
     <button
       hlmBtn
       variant="outline"
-      class="m-auto px-40"
+      class="m-auto w-3/12"
       routerLink="/createNote"
     >
       Adicionar anotação
@@ -19,6 +32,7 @@
     </div>
   </div>
 </section>
+<app-load-more-button [moreNotes]="moreNotes" (click)="loadMoreNotes()"/>
 <ng-template #noNote>
   <div class="text-center pt-8 pb-32">
     <p>Ainda não há notas cadastradas!</p>
