--- a/src/app/components/notes/note/note.component.html
+++ b/src/app/components/notes/note/note.component.html
@@ -7,7 +7,7 @@
   </p>
   <p class="content mt-4">{{ note.content }}</p>
   <div class="flex justify-center gap-2">
-    <button hlmBtn variant="outline" class="border-none cursor-pointer mt-2.5" title="Editar nota {{ note.content }}">
+    <button hlmBtn variant="outline" class="border-none cursor-pointer mt-2.5" title="Editar nota {{ note.content }}" (click)="updateFavorites()">
       <ng-icon name="{{changeFavoriteIcon()}}" />
     </button>
     <button hlmBtn variant="outline" class="border-none cursor-pointer mt-2.5" title="Editar nota {{ note.content }}" routerLink="/notes/updateNote/{{note.id}}">
